docs: Condense Java version section and highlight inline JAVA_HOME usage
- Simplify to single inline JAVA_HOME example for Maven builds
- Remove verbose JDK location lists and setup options
- Add experimental flag note for Java 21+ ByteBuddy compatibility
- Keep essential commands: version check and JDK discovery